--- a/Web.config
+++ b/Web.config
@@ -7,14 +7,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="prerender" type="Prerender_asp_mvc.PrerenderConfigSection, Prerender_asp_mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+    <section name="prerender" type="Prerender.io.PrerenderConfigSection, Prerender.io, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Demo-20131024092135;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Demo-20131024092135.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <prerender
-    prerenderServiceUrl="http://localhost:3000"
-    crawlerUserAgents="me,you,she,he"
     token="[YOUR_TOKEN_HERE]">
   </prerender>
   
@@ -43,7 +41,7 @@
       </namespaces>
     </pages>
     <httpModules>
-      <!--<add name="Prerender" type="Prerender_asp_mvc.PrerenderModule, Prerender_asp_mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>-->
+      <add name="Prerender" type="Prerender.io.PrerenderModule, Prerender.io, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
     </httpModules>
   </system.web>
   <system.webServer>
